plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2' apply false
    id 'io.spring.dependency-management' version '1.1.4' apply false
    id 'org.sonarqube' version '5.1.0.4882'
}

allprojects {
    group = 'com.cyberlearnix'
    version = '1.0.0-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:3.2.2"
        }
    }

    java {
        sourceCompatibility = '21'
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'com.h2database:h2'   // in-memory DB for context-load tests
        implementation 'io.micrometer:micrometer-registry-prometheus'
        
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
    }

    apply plugin: 'jacoco'

    jacoco {
        toolVersion = "0.8.12"
    }

    test {
        useJUnitPlatform()
        finalizedBy jacocoTestReport
    }

    jacocoTestReport {
        dependsOn test
        reports {
            xml.required = true
            html.required = false
        }
    }
}

sonar {
    properties {
        property "sonar.projectKey",  "Cyberlearnix_cyberlearnix_website-dev"
        property "sonar.organization", "cyberlearnix"
        property "sonar.host.url",     "https://sonarcloud.io"
        property "sonar.coverage.jacoco.xmlReportPaths",
                 "**/build/reports/jacoco/test/jacocoTestReport.xml"
        property "sonar.exclusions",
                 "**/generated/**,**/*Application.java,**/*ApplicationTests.java,**/bin/**"
    }
}
